# post-fire-harvest-2024

./: .gitignore  .pre-commit-config.yaml  README.md  paper.ipynb  pyproject.toml
R/area_rate_patchsize/: annual_mean_patch_area_20240301.csv  annual_trends_perc 02022024.csv  salvage analysis and figure final 11062024.R
R/severity/: severity salvage rate modeling 11062024.R  severity_rate_data.csv
data/: interpretation_form.csv  ownership.tif  validation.geojson
data/results/: annual_mean_patch_area.csv  ecoregion_owner_trends.csv  ecoregion_trends.csv  owner_group_trends.csv  owner_trends.csv  ownership_summary.xlsx
notebooks/: figures.ipynb  patch_metrics.ipynb  trends.ipynb  validation.ipynb
src/pfh/: __init__.py  composites.py  containment.py  landsat.py  spectral.py  utils.py
src/pfh/scripts/: _00_build_collections.py  _01_study_fires.py  _02_build_composites.py  _03_otsu_thresholds.py  _04_harvest_maps.py  _05_ancillary_data.py  _06_process_results.py  config.py
tables/: ownership_summary.xlsx
tests/: test_composites.py  test_containment.py  test_spectral.py  test_utils.py
