[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pfh"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Post-fire harvest analysis code."
license = "MIT"
authors = [{name = "Aaron Zuspan", email = "aaron.zuspan@oregonstate.edu"}]
dependencies = [
    "earthengine-api",
    "numpy",
    "geopandas",
    "pandas",
    "plotly",
    "scikit-learn",
    "ipykernel",
    "jupyter",
    "matplotlib",
    "geemap",
    "statsmodels",
    "kaleido",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/aazuspan/postfire-harvests"
Source = "https://github.com/aazuspan/postfire-harvests"

[tool.hatch.version]
path = "src/pfh/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pfh"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.envs.default]
dependencies = ["pre-commit"]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.test.scripts]
all = "pytest . {args}"
cov = "pytest . --cov=src/pfh {args}"

[tool.coverage.run]
omit = [
    "./src/pfh/scripts/*",
    "./tests/*"
]

[tool.ruff]
fix = true
show-fixes = true
include = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "I", "F", "B", "FA", "UP", "PT", "Q", "RET", "SIM", "PERF"]

[tool.ruff.lint.isort]
known-first-party = ["pfh"]